--- a/Source/MvvmContrib/MvvmContrib.csproj
+++ b/Source/MvvmContrib/MvvmContrib.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Common\OkCancelScreen.cs" />
     <Compile Include="Common\OkCancelVM.cs" />
     <Compile Include="Common\Optional.cs" />
+    <Compile Include="Common\ReferenceEqualityComparer.cs" />
     <Compile Include="Common\SaveDiscardScreen.cs" />
     <Compile Include="Common\SaveDiscardVM.cs" />
     <Compile Include="Common\IOkCancelHandler.cs" />
