--- a/Source/Mvvm/Mvvm.csproj
+++ b/Source/Mvvm/Mvvm.csproj
@@ -185,6 +185,7 @@
     <Compile Include="ViewModels\Core\Common\Paths\Definition\OptionalStep.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\Definition\OrStep.cs" />
     <Compile Include="ViewModels\Core\Common\PropertySelector.cs" />
+    <Compile Include="ViewModels\Core\Common\RefreshReason.cs" />
     <Compile Include="ViewModels\Core\DefaultBehaviors.cs" />
     <Compile Include="ViewModels\Core\FluentDescriptorBuilder\Dependencies\Actions\DependencyAction.cs" />
     <Compile Include="ViewModels\Core\FluentDescriptorBuilder\Dependencies\Actions\ExecuteAction.cs" />
