--- a/Features/ScreenEvents/Source/Mvvm/Mvvm.csproj
+++ b/Features/ScreenEvents/Source/Mvvm/Mvvm.csproj
@@ -154,6 +154,8 @@
     <Compile Include="Screens\IViewModelScreen.cs" />
     <Compile Include="Screens\ScreenCreationBehavior.cs" />
     <Compile Include="Screens\ScreenCreationBehaviorAttribute.cs" />
+    <Compile Include="Screens\ScreenEvent.cs" />
+    <Compile Include="Screens\ScreenEvents.cs" />
     <Compile Include="Screens\ScreenExtensions.cs" />
     <Compile Include="Screens\ScreenHierarchyLifecycle.cs" />
     <Compile Include="Screens\ScreenInitializer.cs" />
