--- a/Features/ScreenEvents/Source/MvvmTest/MvvmTest.csproj
+++ b/Features/ScreenEvents/Source/MvvmTest/MvvmTest.csproj
@@ -114,6 +114,7 @@
     <Compile Include="- Test Infrastructure -\ValidatorMockConfiguration.cs" />
     <Compile Include="- Test Infrastructure -\ValidatorMockConfigurationFluent.cs" />
     <Compile Include="ApiTests\Common\EventTests.cs" />
+    <Compile Include="ApiTests\Common\HierarchicalEventTests.cs" />
     <Compile Include="ApiTests\ViewModels\CommandHandlerTests.cs" />
     <Compile Include="ApiTests\ViewModels\Core\PathDefinitionTests.cs" />
     <Compile Include="ApiTests\ViewModels\Core\VMKernelTests.cs" />
