--- a/Features/ScreenEvents/Source/MvvmTest/MvvmTest.csproj
+++ b/Features/ScreenEvents/Source/MvvmTest/MvvmTest.csproj
@@ -115,6 +115,7 @@
     <Compile Include="- Test Infrastructure -\ValidatorMockConfigurationFluent.cs" />
     <Compile Include="ApiTests\Common\EventTests.cs" />
     <Compile Include="ApiTests\Common\HierarchicalEventTests.cs" />
+    <Compile Include="ApiTests\Screens\ScreenEventTests.cs" />
     <Compile Include="ApiTests\ViewModels\CommandHandlerTests.cs" />
     <Compile Include="ApiTests\ViewModels\Core\PathDefinitionTests.cs" />
     <Compile Include="ApiTests\ViewModels\Core\VMKernelTests.cs" />
@@ -204,6 +205,7 @@
     <Compile Include="Screens\LifecycleTreeWalkerTests.cs" />
     <Compile Include="Screens\ScreenCreationBehaviorTest.cs" />
     <Compile Include="Screens\ScreenInitializerTests.cs" />
+    <Compile Include="Screens\ScreenLifecycleOperationsTests.cs" />
     <Compile Include="Screens\ScreenLifecycleStateMachineTests.cs" />
     <Compile Include="Stubs\BehaviorContextStub.cs" />
     <Compile Include="Stubs\ServiceLocatorStub.cs" />
