Starting refactoring Window/DialogService. WIP. Does not work currently.

--- a/Features/ScreenEvents/Source/Mvvm/Mvvm.csproj
+++ b/Features/ScreenEvents/Source/Mvvm/Mvvm.csproj
@@ -160,7 +160,7 @@
     <Compile Include="Screens\ScreenEvent.cs" />
     <Compile Include="Screens\ScreenEvents.cs" />
     <Compile Include="Screens\ScreenExtensions.cs" />
-    <Compile Include="Screens\ScreenHierarchyLifecycle.cs" />
+    <Compile Include="Screens\ScreenHelper.cs" />
     <Compile Include="Screens\ScreenInitializer.cs" />
     <Compile Include="Screens\ScreenLifecycle.cs" />
     <Compile Include="Screens\ScreenLifecycleCollection.cs" />
@@ -170,7 +170,7 @@
     <Compile Include="Screens\ScreenConductor.cs" />
     <Compile Include="Screens\ScreenFactory.cs" />
     <Compile Include="Screens\ScreenLifecycleException.cs" />
-    <Compile Include="Screens\ScreenService.cs" />
+    <Compile Include="Screens\ScreenTreeHelper.cs" />
     <Compile Include="ServiceLocator.cs" />
     <Compile Include="Testing\ArgumentValue.cs" />
     <Compile Include="Testing\Responders\FolderDialogResponderSetup.cs" />
@@ -448,7 +448,6 @@
     <Compile Include="Views\LegacyBinder\DefaultPropertyBuildStep.cs" />
     <Compile Include="Views\LegacyBinder\VMPropertyBinder.cs" />
     <Compile Include="Views\CommonBehaviors.cs" />
-    <Compile Include="Views\WindowService\DialogCloseHandler.cs" />
     <Compile Include="Views\WindowService\DialogService.cs" />
     <Compile Include="Views\IView.cs" />
     <Compile Include="Views\WindowService\IWindowService.cs" />
@@ -456,7 +455,7 @@
     <Compile Include="Views\View.cs" />
     <Compile Include="Views\ViewBinder.cs" />
     <Compile Include="Views\ViewFactory.cs" />
-    <Compile Include="Views\WindowService\WindowCloseHandler.cs" />
+    <Compile Include="Views\WindowService\WindowLifecycle.cs" />
     <Compile Include="Views\WindowService\WindowService.cs" />
   </ItemGroup>
   <ItemGroup>
