Fixed tests except DialogServiceTests.

--- a/Features/ScreenEvents/Source/Mvvm/Mvvm.csproj
+++ b/Features/ScreenEvents/Source/Mvvm/Mvvm.csproj
@@ -157,7 +157,7 @@
     <Compile Include="Screens\ScreenCloseHandler.cs" />
     <Compile Include="Screens\ScreenCreationBehavior.cs" />
     <Compile Include="Screens\ScreenCreationBehaviorAttribute.cs" />
-    <Compile Include="Screens\ScreenEvent.cs" />
+    <Compile Include="Screens\ScreenLifecycleEvent.cs" />
     <Compile Include="Screens\ScreenEvents.cs" />
     <Compile Include="Screens\ScreenExtensions.cs" />
     <Compile Include="Screens\ScreenHelper.cs" />
