--- a/Features/ScreenEvents/Source/MvvmTest/MvvmTest.csproj
+++ b/Features/ScreenEvents/Source/MvvmTest/MvvmTest.csproj
@@ -116,7 +116,7 @@
     <Compile Include="- Test Infrastructure -\ValidatorMockConfigurationFluent.cs" />
     <Compile Include="ApiTests\Common\EventTests.cs" />
     <Compile Include="ApiTests\Common\HierarchicalEventTests.cs" />
-    <Compile Include="ApiTests\Screens\ScreenEventTests.cs" />
+    <Compile Include="ApiTests\Screens\ScreenLifecycleEventTests.cs" />
     <Compile Include="ApiTests\ViewModels\CommandHandlerTests.cs" />
     <Compile Include="ApiTests\ViewModels\Core\PathDefinitionTests.cs" />
     <Compile Include="ApiTests\ViewModels\Core\VMKernelTests.cs" />
